--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-toggle": "^4.1.3",
     "typescript": "^4.9.5",
+    "use-persisted-state": "^0.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +48,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-toggle": "^4.0.5",
+    "@types/use-persisted-state": "^0.3.4",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
